# ncalc

./: .gitignore  Calculator.sln  Description.md  LICENSE  README.md  Task.document.md  Task.initial.md  build.bat  main.cpp
Numlock_Calc/: Calculator.cs  CalculatorForm.Designer.cs  CalculatorForm.cs  CalculatorForm.resx  Numlock_Calc.csproj  Program.cs
ncalc_3/: build.bat  main.cpp  task.md
ncalc_c/: build.bat  main.cpp
ncalc_c2/: .gitignore  CMakeLists.txt  expression_evaluator.cpp  expression_evaluator.h  main.cpp  task.md
